[gd_scene load_steps=3 format=3 uid="uid://bjqu5ojgobwk6"]

[ext_resource type="Script" path="res://assets/scripts/Menu/menu.gd" id="1_on31d"]
[ext_resource type="PackedScene" uid="uid://7ax5kvmjaqyl" path="res://assets/scenes/menu/scene_transition_fade.tscn" id="2_fwisl"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_on31d")

[node name="ButtonManager" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Exit" type="Button" parent="."]
layout_mode = 2
offset_left = 405.0
offset_top = 372.0
offset_right = 451.0
offset_bottom = 403.0
scale = Vector2(5.07135, 4.72993)
text = "Exit"

[node name="Start" type="Button" parent="."]
layout_mode = 2
offset_left = 401.0
offset_top = 163.0
offset_right = 447.0
offset_bottom = 203.0
scale = Vector2(4.99992, 3.85922)
text = "Start"

[node name="fade_transition" parent="." instance=ExtResource("2_fwisl")]
visible = false
layout_mode = 0

[node name="fade_timer" type="Timer" parent="fade_transition"]

[connection signal="pressed" from="Exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="Start" to="." method="_on_start_pressed"]
[connection signal="timeout" from="fade_transition/fade_timer" to="." method="_on_fade_timer_timeout"]
